Updated user controller
